Fixed some styling issues found from testing layout on mobile.

--- a/src/styles/rooms/rooms.scss
+++ b/src/styles/rooms/rooms.scss
@@ -30,7 +30,7 @@
     text-align: center;
 
     .rooms-btn {
-      width: 24rem;
+      width: 28rem;
       padding: 1.6rem 1rem;
       margin: 4.4rem 0;
       background-color: transparent;
